# raspi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  pyproject.toml  setup.sh
conf/: dnsmasq.conf  hostapd.conf  networkmanager.conf
conf/systemd/: ap-ip.service
src/raspi/: __init__.py
tests/: test_cli.py
